test-data/invalid/param-no-children-value.jsx
const Test = () => (
    <Translate>
        <Param name="test" />
    </Translate>
);
